+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 3.0a3?
===========================

*Release data: XX-XXX-2008*

Core and Builtins
-----------------

- Issue #1580: New free format floating point representation based on 
  "Floating-Point Printer Sample Code", by Robert G. Burger. For example
  repr(11./5) now returns '2.2' instead of '2.2000000000000002'.

- Issue #1573: Improper use of the keyword-only syntax makes the parser crash

- Issue #1564: The set implementation should special-case PyUnicode instead
  of PyString


Extension Modules
-----------------


Library
-------

- Issue #1578: Problems in win_getpass


What's New in Python 3.0a2?
===========================

*Release date: 07-Dec-2007*

(Note: this list is incomplete.)

Core and Builtins
-----------------

- str8 now has the same construction signature as bytes.

- Comparisons between str and str8 now return False/True for ==/!=.  sqlite3
  returns str8 when recreating on object from it's __conform__ value.  The
  struct module returns str8 for all string-related formats.  This was true
  before this change, but becomes more apparent thanks to string comparisons
  always being False.

- Replaced `PyFile_FromFile()` with `PyFile_FromFd(fd, name. mode, buffer, 
  encoding, newline)`

- Fixed `imp.find_module()` to obey the -*- coding: -*- header.

- Changed `__file__` and `co_filename` to unicode. The path names are decoded
  with `Py_FileSystemDefaultEncoding` and a new API method 
  `PyUnicode_DecodeFSDefault(char*)` was added.

- io.open() and _fileio.FileIO have grown a new argument closefd. A false
  value disables the closing of the file descriptor.

- Added a new option -b to issues warnings (-bb for errors) about certain
  operations between bytes/buffer and str like str(b'') and comparsion.

- The standards streams sys.stdin, stdout and stderr may be None when the